<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.AddEditTaskActivity">

    <EditText
    android:id="@+id/edit_text_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
    android:hint="@string/hint_task_title"
    android:inputType="textCapSentences"
    android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_task_description"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="1"
        android:gravity="top"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/text_view_due_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/due_date_label"/>
    <TextView
        android:id="@+id/text_view_selected_due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/select_due_date"
        android:clickable="true"
        android:focusable="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">
            <Button
            android:id="@+id/button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel" />
            <Button
            android:id="@+id/button_save_task"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/save_task" />
    </LinearLayout>
</LinearLayout>